# lingbot-world-v2

./: .gitignore  README.md  generate.py  pyproject.toml  requirements.txt  run_fast.sh
examples/00/: ijkl_action.npy  poses.npy  prompt.txt
examples/01/: ijkl_action.npy  intrinsics.npy  poses.npy  prompt.txt  wasd_action.npy
examples/02/: ijkl_action.npy  intrinsics.npy  poses.npy  prompt.txt  wasd_action.npy
examples/03/: intrinsics.npy  poses.npy  wasd_action.npy
examples/04/: intrinsics.npy  poses.npy  wasd_action.npy
examples/05/: ijkl_action.npy  intrinsics.npy  wasd_action.npy
wan/: __init__.py  image2video.py
wan/configs/: __init__.py  shared_config.py  wan_i2v_A14B.py
wan/distributed/: fsdp.py  ulysses.py  util.py
wan/modules/: __init__.py  attention.py  model_causal.py  model_fast.py  t5.py  vae2_1.py
wan/utils/: __init__.py  cam_utils.py  fm_solvers_unipc.py
